# vsSerialAsisstant

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.21B031B1599A87C6.idx  mainwindow.cpp.1C26DD82E25662F3.idx  mainwindow.h.4FD6CCE0947C99F4.idx  serial.cpp.3359C13E0D8F725A.idx  serial.h.1062CA483F1791BC.idx  serialctrl.cpp.A73E428BE445ACB3.idx  serialctrl.h.9F3E34CC00DFD917.idx
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  serialctrl.cpp  serialctrl.h  test.qrc
src/resources/: res.qrc
